<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="ScaledValue" Id="{e448d998-e884-4556-8621-1cf4500fd7e7}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION ScaledValue : REAL
VAR_INPUT
	mv : MonitoredValue;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (mv.rawValueMax - mv.rawValueMin) > 0 THEN
	ScaledValue := mv.scaledValueMin + (mv.rawValue - mv.rawValueMin) * ((mv.scaledValueMax- mv.scaledValueMin) / (mv.rawValueMax - mv.rawValueMin));
END_IF]]></ST>
    </Implementation>
    <LineIds Name="ScaledValue">
      <LineId Id="30" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="23" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>